# buy_the_dip_strategy_simulator

./: .dockerignore  .gitignore  CONFIGURATION_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile.test  EXAMPLES.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  buy_the_dip.py  config.yaml  debug_price.py  docker-compose.test.yml  pyproject.toml  test_notification.sh
.github/workflows/: test-compatibility.yml
.kiro/specs/buy-the-dip-strategy/: design.md  requirements.md  tasks.md
.kiro/specs/dual-price-system/: design.md  requirements.md  tasks.md
.kiro/steering/: llm-guidance.md
buy_the_dip/: __init__.py  investment_tracker.py  models.py  simple_strategy.py  strategy_system.py
buy_the_dip/analysis/: __init__.py  cagr_analysis.py
buy_the_dip/cli/: __init__.py  cli.py
buy_the_dip/config/: __init__.py  config_manager.py  models.py
buy_the_dip/dca_controller/: __init__.py  dca_controller.py  models.py
buy_the_dip/persistence/: __init__.py  state_manager.py
buy_the_dip/price_monitor/: __init__.py  models.py  price_monitor.py
buy_the_dip/strategy_engine/: __init__.py  backtest_engine.py  strategy_engine.py
config_examples/: aggressive.yaml  balanced.yaml  conservative.yaml  crypto_etf.yaml  dividend_focused.yaml  individual_stock.yaml  small_cap.yaml  spy.yaml  template.yaml
scripts/: run_docker_tests.sh  test_compatibility.py  test_local_isolation.sh  test_python_versions.sh
tests/: __init__.py  test_basic.py
tests/integration/: __init__.py  test_backtest_scenarios.py  test_daily_evaluation.py
tests/property/: __init__.py  test_config_properties.py  test_investment_constraint_properties.py  test_investment_decision_properties.py  test_investment_execution_properties.py  test_investment_persistence_properties.py  test_portfolio_calculation_properties.py  test_price_caching_properties.py  test_trigger_calculation_properties.py
tests/unit/: __init__.py  test_cache_validation.py  test_cagr_analysis.py  test_cli.py  test_investment_spacing.py  test_investment_tracker.py  test_price_monitor.py  test_rolling_window_calculations.py  test_state_manager.py  test_strategy_engine.py  test_strategy_system.py
