[tool.poetry]
name = "buy-the-dip-strategy"
version = "0.1.0"
description = "A Python-based stock trading strategy simulator implementing dollar-cost averaging during market downturns"
authors = ["Nick Lee <your-email@example.com>"]
readme = "README.md"
homepage = "https://github.com/nickaustinlee/buy_the_dip_strategy_simulator"
repository = "https://github.com/nickaustinlee/buy_the_dip_strategy_simulator"
documentation = "https://github.com/nickaustinlee/buy_the_dip_strategy_simulator#readme"
keywords = ["trading", "stocks", "dca", "dollar-cost-averaging", "investment", "strategy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "buy_the_dip"}]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.18"
pandas = "^2.0.0"
pydantic = "^2.0.0"
PyYAML = "^6.0"
python-dateutil = "^2.9.0.post0"
pandas-market-calendars = "^5.2.3"

[tool.poetry.group.test.dependencies]
hypothesis = "^6.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
types-PyYAML = "^6.0.0"
types-python-dateutil = "^2.8.0"
pandas-stubs = "^2.3.3.251219"

[tool.poetry.scripts]
buy-the-dip = "buy_the_dip.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"